
=======================================================
            WanT code:  Log of Changes 
=======================================================


07 Nov 2008      Timing module updated to average over pools for well-defined
                 clocks. Overlap_module updated to allow restart with a
                 different number of bands in overlap_read. (AF)

06 Nov 2008      Overlaps and projections are written on a single file also
                 in parallel runs. Bug fixed in restarting (eamp alloc). (AF)

05 Nov 2008      Calls to mp_sum bufferized over kpts. Bug fixed in parallel
                 restarting (subspace_init). (AF)

25 Oct 2008      Inclusion of correlation in transport updated. Test08
                 modified to check correlation effects and shifts in
                 transport. (AF)

24 Oct 2008      Bug fixed (transport calcs) in setting default for overlaps.
                 Bug fix and output updates in memusage.f90. Updates in the
                 management of correlation in transport. (AF)

22 Oct 2008      Little bug fixed in run_AlH.sh and docs/TODO file updated. (AF)

20 Oct 2008      Full implementation of wfc and beta proj buffering is now 
                 properly working and carefully tested. Documentation 
                 updated. (AF)

17 Oct 2008      simple workaround in read_matrix added. (AF)

14 Oct 2008      configure.ac updated from espresso distribution (today's
                 CVS). (AF)

10 Oct 2008      Improvement of memory requirements by means of wfc buffering.
                 nwfcx variable added. (AF)

04 Sep 2008      Internal copies of blas and lapack updated, according to the
                 current needs of WanT. (AF)

03 Sep 2008      Further development of the parallel implementation of 
                 disentangle.x and wannier.x . (AF)

01 Sep 2008      Memory usage analysis added to all data modules. Workspace
                 module for wannier localization added. (AF)
